syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.goodmetrics";
option java_outer_classname = "MetricsProto";

package goodmetrics;

service Metrics {
    rpc SendMetrics(MetricsRequest) returns (MetricsReply) {}
}

message MetricsRequest {
    map<string, Dimension> shared_dimensions = 1;
    repeated Datum metrics = 2;
}

message MetricsReply {
}

message Datum {
    // You should use lowercase_snake_case for this.
    // If you don't, you may be surprised to see lowercase_snake_case-ification in your database.
    // 
    // Use names like: service_operation
    string metric = 1;
    map<string, Dimension> dimensions = 2;
    map<string, Measurement> measurements = 3;
}

message Dimension {
    oneof value {
        string string = 1;
        uint64 number = 2;
    }
}

message Measurement {
    uint64 unix_nanos = 2;
    oneof measurement {
        double gauge = 3;
        StatisticSet statistic_set = 4;
        Histogram histogram = 5;
    }
}

message StatisticSet {
    double min = 1;
    double max = 2;
    double sum = 3;
    double count = 4;
}

message Histogram {
    repeated Bucket buckets = 1;
}

message Bucket {
    int64 threshold = 1;
    int64 count = 2;
}
